base/addons/template.yml
# In "webhook/addons/my-addon.yml"
Parameters:
  # Required parameters by AWS Copilot.
  App:
    Type: String
  Env:
    Type: String

  # Additional parameters defined in addons.parameters.yml


Resources:
  MyALBAccessPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: LBActions
            Effect: Allow
            Action:
              - elasticloadbalancing:CreateListener
              - elasticloadbalancing:CreateLoadBalancer
              - elasticloadbalancing:CreateRule
              - elasticloadbalancing:CreateTargetGroup
              - elasticloadbalancing:DeleteListener
              - elasticloadbalancing:DeleteLoadBalancer
              - elasticloadbalancing:DeleteRule
              - elasticloadbalancing:DeleteTargetGroup
              - elasticloadbalancing:DeregisterTargets
              - elasticloadbalancing:DescribeListeners
              - elasticloadbalancing:DescribeLoadBalancerAttributes
              - elasticloadbalancing:DescribeLoadBalancers
              - elasticloadbalancing:DescribeRules
              - elasticloadbalancing:ModifyListener
              - elasticloadbalancing:ModifyLoadBalancerAttributes
              - elasticloadbalancing:ModifyRule
              - elasticloadbalancing:ModifyTargetGroup
              - elasticloadbalancing:ModifyTargetGroupAttributes
              - elasticloadbalancing:RegisterTargets
            Resource: !Ref LoadBalancer
  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Type: application
      SecurityGroups:
        - Fn::ImportValue: 
            !Sub '${App}-${Env}-EnvironmentSecurityGroup'
      Subnets: 
        - !Select [0, !Split [",", Fn::ImportValue: !Sub '${App}-${Env}-PublicSubnets']]
        - !Select [1, !Split [",", Fn::ImportValue: !Sub '${App}-${Env}-PublicSubnets']]
      Tags:
        - Key: Name
          Value: signoz-load-balancer
  Listener:
    DependsOn: ALBTargetGroup
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Protocol: HTTP
      Port: 80
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref ALBTargetGroup       
      LoadBalancerArn: !Ref LoadBalancer
  ALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 3301
      Protocol: HTTP
      VpcId: vpc-09cc39b8b0fa6b10f
       
      TargetType: ip
  ALBSecurityGroup:
    Metadata:
      'aws:copilot:description': 'A security group for your network load balancer to route traffic to service'
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access from the network load balancer to service
      SecurityGroupIngress:
        - CidrIp: 10.1.20.0/24
          Description: Ingress to allow access from Network Load Balancer subnet
          FromPort: 3301
          IpProtocol: TCP
          ToPort: 3301
        - CidrIp: 10.1.20.0/24
          Description: Ingress to allow access from Network Load Balancer subnet for health check
          FromPort: 3301
          ToPort: 3301
          IpProtocol: TCP
        - CidrIp: 10.1.10.0/24
          Description: Ingress to allow access from Network Load Balancer subnet
          FromPort: 3301
          IpProtocol: TCP
          ToPort: 3301
        - CidrIp: 10.1.10.0/24
          Description: Ingress to allow access from Network Load Balancer subnet for health check
          FromPort: 3301
          ToPort: 3301
          IpProtocol: TCP

      VpcId: vpc-09cc39b8b0fa6b10f

Outputs:
  MyALBAccessPolicyArn:
    Description: "The ARN of the ManagedPolicy to attach to the task role."
    Value: !Ref MyALBAccessPolicy
  LoadBalancerFrontendService:
    Description: ARN of the Discovery Service.
    Value: !Ref ALBTargetGroup
    Export:
      Name: !Sub ${App}-${Env}-FrontendLoadBalancer
  LoadBalancerFrontendServiceSecurityGroup:
    Description: ARN of the Discovery Service.
    Value: !Ref ALBSecurityGroup
    Export:
      Name: !Sub ${App}-${Env}-FrontendALBSecurityGroup
